Bug 140893 - XLSX: save is slow for sheet that has value in row 1048576
Summary: XLSX: save is slow for sheet that has value in row 1048576
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords: filter:xlsx, perf, wantBacktrace
Depends on:
Blocks: Save
  Show dependency treegraph
 
Reported: 2021-03-08 18:22 UTC by Mariano Mineo
Modified: 2022-03-02 10:23 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Accounting (68.75 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2021-03-08 18:31 UTC, Mariano Mineo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mariano Mineo 2021-03-08 18:22:26 UTC
Description:
Even in the new version 7.1.0.3 save command is very very slow. When I try to save my spreadsheet, the program inform that "not responding" and I have to wait half a minute before the file is saved. OS Windows 10 Home 64 bit, version 20H2, 19042.844. 

Actual Results:
Whenever I add new data and try to save the file, this happens

Expected Results:
I have to wait almost half minute


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: fi
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows (All)
OS is 64bit: no
Comment 1 Mariano Mineo 2021-03-08 18:31:50 UTC
Created attachment 170342 [details]
Accounting
Comment 2 Roman Kuznetsov 2021-03-08 19:21:31 UTC
confirm some delay in

Version: 7.2.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d8ed3bda462b351d2b98ec57cfdb879e0eec0010
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Raster; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL
Comment 3 Commit Notification 2022-02-20 10:44:34 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9c7f3ddf5b3c23de0fed08fa3ebdfa2a95fec588

optimize XclExpRowBuffer::GetOrCreateRow() (tdf#140893)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Luboš Luňák 2022-02-20 10:46:13 UTC
Go to second sheet, hit Ctrl+End and you'll find the document has a value in the last row.
Comment 5 Luboš Luňák 2022-02-20 10:47:46 UTC
Ctrl+End and Ctrl+left afterwards, anyway.
Comment 6 Luboš Luňák 2022-03-01 14:09:59 UTC
*** Bug 95346 has been marked as a duplicate of this bug. ***
Comment 7 Timur 2022-03-02 10:23:35 UTC
I see it reasonably fast now, maybe from 16 to 8 seconds.