optimize XclExpRowBuffer::GetOrCreateRow() (tdf#140893)

This gets called often especially with larger spreadsheets.

Change-Id: I6acf23d0942d1745a52963c9b5b08453e1ec28bc
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/130207
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>